[package]
name = "inkwell-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
printpdf = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
image = "0.25"
base64 = "0.22"
ureq = "2.10"
urlencoding = "2.1"
